--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <div class="modal-content">
         <div class="modal-header">
             <span class="closeBtn">&times;</span>
-            <h2> Select Showtime </h2>
+            <h2>Select Showtime </h2>
         </div>
         <div class="modal-body">
-            <h3>Star Wars: Episode IV-A New Hope</h3>
-            <img src="./img/swPoster.jpg">
+            <h3 id="modalTitle">Star Wars: Episode IV-A New Hope</h3>
+            <img id="modalPoster" src="./img/swPoster.jpg">
             <div class="showtimes">
                 <button id="130Btn" class="timeSelect">1:30pm</button>
                 <button id="345Btn" class="timeSelect">3:45pm</button>
