seat selection almost done

--- a/seatSelector.html
+++ b/seatSelector.html
@@ -25,42 +25,53 @@
       </div>
     </header>
 
-    <h2> 
+    <h2>Star Wars: Episode IV - A New Hope 
+
+      <div class="contain">
+          <div class="moviePoster">
+              <img id="poster" src="./img/swPoster.jpg">
+            </div>
         <div class="grid-container">
-                <div class = "grid-item">1</div>
-                <div class = "grid-item">2</div>
-                <div class = "grid-item">3</div>
-                <div class = "grid-item">4</div>
-                <div class = "grid-item">5</div>
-                <div class = "grid-item">6</div>
-                <div class = "grid-item">7</div>
-                <div class = "grid-item">8</div>
-                <div class = "grid-item">1</div>
-                <div class = "grid-item">2</div>
-                <div class = "grid-item">3</div>
-                <div class = "grid-item">4</div>
-                <div class = "grid-item">5</div>
-                <div class = "grid-item">6</div>
-                <div class = "grid-item">7</div>
-                <div class = "grid-item">8</div>
-                <div class = "grid-item">1</div>
-                <div class = "grid-item">2</div>
-                <div class = "grid-item">3</div>
-                <div class = "grid-item">4</div>
-                <div class = "grid-item">5</div>
-                <div class = "grid-item">6</div>
-                <div class = "grid-item">7</div>
-                <div class = "grid-item">8</div>
-                <div class = "grid-item">1</div>
-                <div class = "grid-item">2</div>
-                <div class = "grid-item">3</div>
-                <div class = "grid-item">4</div>
-                <div class = "grid-item">5</div>
-                <div class = "grid-item">6</div>
-                <div class = "grid-item">7</div>
-                <div class = "grid-item">8</div>
+                <button class = "grid-item">A1</button>
+                <button class = "grid-item">A2</button>
+                <button class = "grid-item">A3</button>
+                <button class = "grid-item">A4</button>
+                <button class = "grid-item">A5</button>
+                <button class = "grid-item">A6</button>
+                <button class = "grid-item">A7</button>
+                <button class = "grid-item">A8</button>
+                <button class = "grid-item">B1</button>
+                <button class = "grid-item">B2</button>
+                <button class = "grid-item">B3</button>
+                <button class = "grid-item">B4</button>
+                <button class = "grid-item">B5</button>
+                <button class = "grid-item">B6</button>
+                <button class = "grid-item">B7</button>
+                <button class = "grid-item">B8</button>
+                <button class = "grid-item">C1</button>
+                <button class = "grid-item">C2</button>
+                <button class = "grid-item">C3</button>
+                <button class = "grid-item">C4</button>
+                <button class = "grid-item">C5</button>
+                <button class = "grid-item">C6</button>
+                <button class = "grid-item">C7</button>
+                <button class = "grid-item">C8</button>
+                <button class = "grid-item">D1</button>
+                <button class = "grid-item">D2</button>
+                <button class = "grid-item">D3</button>
+                <button class = "grid-item">D4</button>
+                <button class = "grid-item">D5</button>
+                <button class = "grid-item">D6</button>
+                <button class = "grid-item">D7</button>
+                <button class = "grid-item">D8</button>
         </div>
-        
+        </div>
+        <div class="btnZone">
+            <a href="index.html"><button id="backBtn" class="button" >Back</button></a>
+            <a href="concession.html"><button id="continueBtn" class="button">Continue</button></a>
+        </div>
+        <p> . </p>
     </h2>
+    <script src="./selection.js"></script>
   </body>
 </html>
