--- a/seatSelector.html
+++ b/seatSelector.html
@@ -26,7 +26,10 @@
     </header>
 
     <h2>Star Wars: Episode IV - A New Hope 
-
+      <p id="showtime"></p>
+      <p id="selected"></p>
+      <p class="selectedTitle">Seat Selected: </p>
+     
       <div class="contain">
           <div class="moviePoster">
               <img id="poster" src="./img/swPoster.jpg">
@@ -72,6 +75,7 @@
         </div>
         <p> . </p>
     </h2>
-    <script src="./selection.js"></script>
+    <script type="text/javascript" src="moviePopup.js"></script>
+    <script type="text/javascript" src="./selection.js"></script>
   </body>
 </html>
