--- a/index.html
+++ b/index.html
@@ -50,21 +50,55 @@
 
     <h2><u>Now Playing</u>
         <p></p>
-        <div id="poster1" class="col-1-5"><img src="./img/swPoster.jpg"/></div>
-        <div class="col-1-5"><img src="./img/isPoster.jpg"/></div>
-        <div class="col-1-5"><img src="./img/brPoster.jpg"/></div>
-        <div class="col-1-5"><img src="./img/cmPoster.jpg"/></div>
-        <div class="col-1-5"><img src="./img/jPoster.jpg"/></div>
+        <div id="poster1" class="col-1-5">
+          <img id="mainPoster" src="./img/swPoster.jpg"/>
+          <span id="swNH" class="movieTitle">Star Wars: A New Hope</span>
+        </div>
+        <div class="col-1-5">
+          <img src="./img/isPoster.jpg"/>
+          <span class="movieTitle">Interstellar</span>
+        </div>
+        <div class="col-1-5">
+          <img src="./img/brPoster.jpg"/>
+          <span class="movieTitle">Blade Runner 2049</span>
+        </div>
+        <div class="col-1-5">
+          <img src="./img/cmPoster.jpg"/>
+          <span class="movieTitle">Captain Marvel</span>
+        </div>
+        <div class="col-1-5">
+          <img src="./img/jPoster.jpg"/>
+          <span id="jaws" class="movieTitle">Jaws</span>
+        </div>
     </h2>
     <p>.</p>
     <h2>
-        <div class="col-6-10"><img src="./img/ggPoster.jpg"/></div>
-        <div class="col-6-10"><img src="./img/bpPoster.jpg"/></div>
-        <div class="col-6-10"><img src="./img/amPoster.jpg"/></div>
-        <div class="col-6-10"><img src="./img/tsPoster.jpg"/></div>
-        <div class="col-6-10"><img src="./img/sPoster.jpg"/></div>
+        <div class="col-6-10">
+          <img src="./img/ggPoster.jpg"/>
+          <span id="gg2" class="movieTitle">Guardians Of The Galaxy Vol. 2</span>
+        </div>
+        <div class="col-6-10">
+          <img src="./img/bpPoster.jpg"/>
+          <span class="movieTitle">Black Panther</span>
+        </div>
+        <div class="col-6-10">
+          <img src="./img/amPoster.jpg"/>
+          <span class="movieTitle">Aquaman</span>
+        </div>
+        <div class="col-6-10">
+          <img src="./img/tsPoster.jpg"/>
+          <span class="movieTitle">Toy Story 4</span>
+        </div>
+        <div class="col-6-10">
+          <img src="./img/sPoster.jpg"/>
+          <span id="solo" class="movieTitle">Solo: A Star Wars Movie</span>
+        </div>
     </h2>
     
     <script src="moviePopup.js"></script>
   </body>
+  <footer>
+    <h3 id="blank">.</h3>
+    <h3>Group6 Productions 2019 © </h3>
+  </footer>
 </html>
