--- a/seatSelector.html
+++ b/seatSelector.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="./css/styleSelector.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>Cinema Connect</title>
   </head>
@@ -16,7 +16,7 @@
 
         <nav>
           <ul>
-            <li class="current"><a href="index.html">Movies</a></li>
+            <li><a href="index.html">Movies</a></li>
             <li><a href="concession.html">Concession Items</a></li>
             <li><a href="account.html">Account</a></li>
             <li><a href="contact.html">Contact Us</a></li>
@@ -70,12 +70,16 @@
         </div>
         </div>
         <div class="btnZone">
-            <a href="index.html"><button id="backBtn" class="button" >Back</button></a>
-            <a href="concession.html"><button id="continueBtn" class="button">Continue</button></a>
+            <a href="index.html"><button id="backBtn" class="SSButton" >Back</button></a>
+            <a href="concession.html"><button id="continueBtn" class="SSButton">Continue</button></a>
         </div>
-        <p> . </p>
+        <p id="blankYellow"> . </p>
     </h2>
     <script type="text/javascript" src="moviePopup.js"></script>
     <script type="text/javascript" src="./selection.js"></script>
   </body>
+  <footer>
+      <h3 id="blank">.</h3>
+      <h3>Group6 Productions 2019 © </h3>
+    </footer>
 </html>
