--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
     </h2>
     
-    <script src="moviePopup.js"></script>
+    <script src="./scripts/moviePopup.js"></script>
   </body>
   <footer>
     <h3 id="blank">.</h3>
