--- a/seatSelector.html
+++ b/seatSelector.html
@@ -75,8 +75,8 @@
         </div>
         <p id="blankYellow"> . </p>
     </h2>
-    <script type="text/javascript" src="moviePopup.js"></script>
-    <script type="text/javascript" src="./selection.js"></script>
+    <script type="text/javascript" src="./scripts/moviePopup.js"></script>
+    <script type="text/javascript" src="./scripts/selection.js"></script>
   </body>
   <footer>
       <h3 id="blank">.</h3>
