--- a/concession.html
+++ b/concession.html
@@ -97,7 +97,7 @@
     </div>
 
     </div>
-    <script type="text/javascript" src="./concessionMenu.js"></script>
+    <script type="text/javascript" src="./scripts/concessionMenu.js"></script>
   </body>
 
   <footer>
