--- a/account.html
+++ b/account.html
@@ -24,5 +24,62 @@
       </div>
     </header>
 
+    <div class="accountWindow">
+
+        <div class="accountRow">
+            <div class="accountCol">
+              <span class="title">Welcome, John Doe</span>
+            </div>
+            <div class="accountCol">
+              <span></span>
+            </div>
+            <div class="accountCol">
+              <span class="title"><u>Daily Recommended Movie</u></span>
+            </div>
+          </div>
+
+          <div class="accountRow">
+              <div class="accountCol">
+                <span>Email: john.doe@gmail.com</span>
+              </div>
+              <div class="accountCol">
+                <span></span>
+              </div>
+              <div class="accountCol">
+                <img id="dailyMovie" src="./img/sPoster.jpg">
+                <p></p>
+                <span>Solo: A Star Wars Movie</span>
+              </div>
+            </div>
+
+            <div class="accountRow">
+                <div class="accountCol">
+                  <span>Cinema Connect Points: 52</span>
+                </div>
+                <div class="accountCol">
+                  <span></span>
+                </div>
+                <div class="accountCol">
+                    <span class="title"><u>Previously Watched Movie</u></span>
+                </div>
+              </div>
+
+              <div class="accountRow">
+                  <div class="accountCol">
+                    <span>View Recorded Payment Methods</span>
+                  </div>
+                  <div class="accountCol">
+                    <span></span>
+                  </div>
+                  <div class="accountCol">
+                      <img id="prevMovie" src="./img/swPoster.jpg">
+                      <p></p>
+                      <span>Star Wars: A New Hope</span>
+                  </div>
+              </div>
+
+
+    </div>
+
   </body>
 </html>
