--- a/signin.html
+++ b/signin.html
@@ -48,7 +48,7 @@
             <span></span>
           </div>
           <div class="aboutCol">
-            <button class="signInButton">Sign-In</button>
+            <a href="account.html"><button class="signInButton">Sign-In</button></a>
           </div>
           <div class="aboutCol">
             <span id="totalPrice"></span>
