--- a/index.html
+++ b/index.html
@@ -31,8 +31,31 @@
             <h2>Select Showtime </h2>
         </div>
         <div class="modal-body">
-            <h3 id="modalTitle">Star Wars: Episode IV-A New Hope</h3>
-            <img id="modalPoster" src="./img/swPoster.jpg">
+
+            <div class="modal-row">
+                <div class="modal-col">
+                  <span class="modalTitle">Star Wars: A New Hope</span>
+                </div>
+                <div class="modal-col">
+                  <span><u>Movie Summary</u></span>
+                  <!--right-->
+                </div>
+            </div>
+            <div class="modal-row">
+                <div class="modal-col">
+                    <img id="modalPoster" src="./img/swPoster.jpg">
+                </div>
+                <div class="modal-col">
+                    <span>The Imperial Forces -- under orders from cruel Darth Vader 
+                      (David Prowse) -- hold Princess Leia (Carrie Fisher) hostage, in their 
+                      efforts to quell the rebellion against the Galactic Empire. Luke Skywalker 
+                      (Mark Hamill) and Han Solo (Harrison Ford), captain of the Millennium Falcon, 
+                      work together with the companionable droid duo R2-D2 (Kenny Baker) and C-3PO 
+                      (Anthony Daniels) to rescue the beautiful princess, help the Rebel Alliance, and 
+                      restore freedom and justice to the Galaxy.</span>
+                </div>
+            </div>
+            
             <div class="showtimes">
                 <button id="130Btn" class="timeSelect">1:30pm</button>
                 <button id="345Btn" class="timeSelect">3:45pm</button>
