--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img id="modalPoster" src="./img/swPoster.jpg">
                 </div>
                 <div class="modal-col">
-                    <span>The Imperial Forces -- under orders from cruel Darth Vader 
+                    <span class="summary">The Imperial Forces -- under orders from cruel Darth Vader 
                       (David Prowse) -- hold Princess Leia (Carrie Fisher) hostage, in their 
                       efforts to quell the rebellion against the Galactic Empire. Luke Skywalker 
                       (Mark Hamill) and Han Solo (Harrison Ford), captain of the Millennium Falcon, 
