--- a/checkout.html
+++ b/checkout.html
@@ -19,6 +19,8 @@
             <li><a href="concession.html">Concession Items</a></li>
             <li><a href="account.html">Account</a></li>
             <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="signin.html">Sign-In</a></li>
+            <li><a href="signup.html">Sign-Up</a></li>
           </ul>
         </nav>
       </div>
@@ -55,16 +57,16 @@
           </div>
           <div class ="chkoutCol">
             <span id="chkoutTitle">Star Wars: A New Hope</span>
-            <span id="chkoutTitle">6:30PM Seats C4,C5</span>
+            <span id="chkoutTitle">6:30PM Seat C4</span>
           </div>
           <div class="chkoutCol">
             <span id="price">$10.99</span>
           </div>
           <div class="chkoutCol">
-            <span id="ticketQty">2</span>
+            <span id="ticketQty">1</span>
           </div>
           <div class="chkoutCol">
-            <span id="totalPrice">$21.98</span>
+            <span id="totalPrice">$10.99</span>
           </div>
 
         </div>
@@ -104,7 +106,7 @@
             <span id="subTotal">Subtotal</span>
           </div>
           <div class="chkoutCol">
-            <span id="totalPriceFin">$27.97</span>
+            <span id="totalPriceFin">$16.98</span>
           </div>
 
         </div>
@@ -124,7 +126,7 @@
             <span id="subTotal">Taxes</span>
           </div>
           <div class="chkoutCol">
-            <span id="taxAmount">$3.39</span>
+            <span id="taxAmount">$2.04</span>
           </div>
 
         </div>
@@ -144,7 +146,7 @@
             <span id="subTotal">Total</span>
           </div>
           <div class="chkoutCol">
-            <span id="taxAmount">$31.36</span>
+            <span id="taxAmount">$19.02</span>
           </div>
 
         </div>
