--- a/seatSelector.html
+++ b/seatSelector.html
@@ -20,6 +20,8 @@
             <li><a href="concession.html">Concession Items</a></li>
             <li><a href="account.html">Account</a></li>
             <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="signin.html">Sign-In</a></li>
+            <li><a href="signup.html">Sign-Up</a></li>
           </ul>
         </nav>
       </div>
